cmake_minimum_required(VERSION 3.15)
project(cppproj)

set(CMAKE_CXX_STANDARD 11)

add_executable(cppproj a01/StructSales.cpp)
#add_executable(cppproj a01/Sales.cpp a01/SalesSub.cpp)
#add_executable(cppproj a01/01面向对象设计案例-立方体案例.cpp)
#add_executable(cppproj a02-io/IO.cpp)
#add_executable(cppproj a03-container/Container.cpp)

#add_executable(cppproj ptr/test-ptr.cpp)

#add_executable(cppproj multi-thread/cpp-thread.cpp)
#add_executable(cppproj multi-thread/SafeQueue.cpp multi-thread/c-poxi-pthread.cpp)

#add_executable(cppproj io/c-printf-sprintf-fprintf.cpp)
